// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button snapshots > css mode snapshot 1`] = `
"import React from 'react';
import styles from './Button.module.css';
export type ButtonVariant = 'primary' | 'secondary' | 'ghost' | 'danger';
export type ButtonSize    = 'sm' | 'md' | 'lg';

export interface ButtonProps extends React.ButtonHTMLAttributes<HTMLButtonElement> {
  variant?:  ButtonVariant;
  size?:     ButtonSize;
  loading?:  boolean;
  children:  React.ReactNode;
}

export const ButtonRoot = React.forwardRef<HTMLButtonElement, ButtonProps>(
  ({ variant = 'primary', size = 'md', loading = false, disabled, children, className, ...props
 }, ref) => {
    const cls = [
      styles.btn,
      styles[\`btn--\${variant}\`],
      styles[\`btn--\${size}\`],
      loading  && styles['btn--loading'],
      disabled && styles['btn--disabled'],
      className,
    ].filter(Boolean).join(' ');

    return (
      <button
        ref={ref}
        className={cls}
        disabled={disabled || loading}
        aria-disabled={disabled || loading}
        aria-busy={loading}
        {...props}
      >
        {children}
      </button>
    );
  }
);

export const ButtonLabel = ({ children, className, ...props }: React.HTMLAttributes<HTMLSpanElement>) => (
  <span className={className} {...props}>{children}</span>
);

export const ButtonSpinner = ({ className, ...props }: React.HTMLAttributes<HTMLSpanElement>) => (
  <span className={[styles.spinner, className].filter(Boolean).join(' ')} aria-hidden="true" {...props} />
);

export const ButtonIcon = ({ children, className, ...props }: React.HTMLAttributes<HTMLSpanElement>) => (
  <span className={className} aria-hidden="true" {...props}>{children}</span>
);

export const Button = Object.assign(ButtonRoot, {
  Label: ButtonLabel,
  Spinner: ButtonSpinner,
  Icon: ButtonIcon,
});

Button.displayName = 'Button';
ButtonRoot.displayName = 'Button.Root';
ButtonLabel.displayName = 'Button.Label';
ButtonSpinner.displayName = 'Button.Spinner';
ButtonIcon.displayName = 'Button.Icon';
"
`;

exports[`Button snapshots > css mode snapshot 2`] = `
"/* Generated by Crucible — edit freely, re-generate with --force */

.btn {
  display:         inline-flex;
  align-items:     center;
  justify-content: center;
  gap:             calc(var(--spacing-unit) * 2);
  font-family:     var(--font-family);
  font-weight:     500;
  border:          1px solid transparent;
  cursor:          pointer;
  border-radius:   var(--radius-md);
  transition:      all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
}

.btn:focus-visible {
  outline:        2px solid var(--color-primary);
  outline-offset: 3px;
}

@media (prefers-reduced-motion: reduce) {
  .btn { transition: none; }
}

/* Sizes */
.btn--sm { 
  padding:   calc(var(--spacing-unit) * 1.5) calc(var(--spacing-unit) * 3);  
  font-size: 0.875rem; 
}
.btn--md { 
  padding:   calc(var(--spacing-unit) * 2.5) calc(var(--spacing-unit) * 5); 
  font-size: 1rem; 
}
.btn--lg { 
  padding:   calc(var(--spacing-unit) * 3.5) calc(var(--spacing-unit) * 7); 
  font-size: 1.125rem; 
}

/* Variants */
.btn--primary   { background: var(--color-primary);   color: var(--color-surface);  border-color: var(--color-primary); }
.btn--secondary { background: var(--color-secondary); color: var(--color-primary);  border-color: var(--color-border); }
.btn--ghost     { background: transparent;            color: var(--color-text);     border-color: var(--color-border); }
.btn--danger    { background: var(--color-danger);    color: var(--color-surface);  border-color: var(--color-danger); }

.btn--primary:not(:disabled):hover   { filter: brightness(1.1); }
.btn--secondary:not(:disabled):hover { background: var(--color-primary); color: var(--color-surface); }
.btn--ghost:not(:disabled):hover     { background: var(--color-secondary); }
.btn--danger:not(:disabled):hover    { filter: brightness(1.1); }

/* States */
.btn--disabled, .btn:disabled { opacity: 0.45; cursor: not-allowed; }
.btn--loading  { cursor: wait; }

.spinner {
  width: 1em; height: 1em;
  border: 2px solid currentColor;
  border-top-color: transparent;
  border-radius: 50%;
  animation: spin 0.6s linear infinite;
}
@keyframes spin { to { transform: rotate(360deg); } }
"
`;

exports[`Button snapshots > css mode snapshot 3`] = `
"import type { Meta, StoryObj } from '@storybook/react';
import React, { useState } from 'react';
import { Button } from './Button';

const meta: Meta<typeof Button> = {
  title: 'Crucible/Button',
  component: Button,
  parameters: { layout: 'centered' },
  argTypes: {
    variant:  { control: 'select', options: ['primary', 'secondary', 'ghost', 'danger'] },
    size:     { control: 'select', options: ['sm', 'md', 'lg'] },
    loading:  { control: 'boolean' },
    disabled: { control: 'boolean' },
  },
};
export default meta;
type Story = StoryObj<typeof Button>;

export const Default: Story = {
  args: { variant: 'primary', size: 'md' },
  render: (args) => (
    <Button {...args}>
      <Button.Label>Button</Button.Label>
    </Button>
  ),
};

export const Primary: Story = {
  args: { variant: 'primary' },
  render: (args) => (
    <Button {...args}>
      <Button.Label>Primary Button</Button.Label>
    </Button>
  ),
};
export const Secondary: Story = {
  args: { variant: 'secondary' },
  render: (args) => (
    <Button {...args}>
      <Button.Label>Secondary Button</Button.Label>
    </Button>
  ),
};
export const Ghost: Story = {
  args: { variant: 'ghost' },
  render: (args) => (
    <Button {...args}>
      <Button.Label>Ghost Button</Button.Label>
    </Button>
  ),
};
export const Danger: Story = {
  args: { variant: 'danger' },
  render: (args) => (
    <Button {...args}>
      <Button.Label>Danger Button</Button.Label>
    </Button>
  ),
};

export const Sm: Story = {
  args: { size: 'sm' },
  render: (args) => (
    <Button {...args}>
      <Button.Label>Sm Size</Button.Label>
    </Button>
  ),
};
export const Md: Story = {
  args: { size: 'md' },
  render: (args) => (
    <Button {...args}>
      <Button.Label>Md Size</Button.Label>
    </Button>
  ),
};
export const Lg: Story = {
  args: { size: 'lg' },
  render: (args) => (
    <Button {...args}>
      <Button.Label>Lg Size</Button.Label>
    </Button>
  ),
};

export const Loading: Story = {
  args: { variant: 'primary', loading: true },
  render: (args) => (
    <Button {...args}>
      <Button.Spinner />
      <Button.Label>Loading...</Button.Label>
    </Button>
  ),
};

export const Disabled: Story = {
  args: { variant: 'primary', disabled: true },
  render: (args) => (
    <Button {...args}>
      <Button.Label>Disabled</Button.Label>
    </Button>
  ),
};

export const WithIcon: Story = {
  args: { variant: 'primary' },
  render: (args) => (
    <Button {...args}>
      <Button.Icon>🚀</Button.Icon>
      <Button.Label>Launch</Button.Label>
    </Button>
  ),
};
"
`;

exports[`Button snapshots > tailwind mode snapshot 1`] = `
"import React from 'react';

const variantClasses: Record<string, string> = {
  primary: 'bg-[var(--color-primary)] text-[var(--color-surface)] border-[var(--color-primary)] hover:brightness-110',
  secondary: 'bg-[var(--color-secondary)] text-[var(--color-primary)] border-[var(--color-border)] hover:bg-[var(--color-primary)] hover:text-[var(--color-surface)]',
  ghost: 'bg-transparent text-[var(--color-text)] border-[var(--color-border)] hover:bg-[var(--color-secondary)]',
  danger: 'bg-[var(--color-danger)] text-[var(--color-surface)] border-[var(--color-danger)] hover:brightness-110',
 };

const sizeClasses: Record<string, string> = {
  sm: 'px-3 py-1.5 text-sm',
  md: 'px-5 py-2.5 text-base',
  lg: 'px-7 py-3.5 text-lg',
};

export type ButtonVariant = 'primary' | 'secondary' | 'ghost' | 'danger';
export type ButtonSize    = 'sm' | 'md' | 'lg';

export interface ButtonProps extends React.ButtonHTMLAttributes<HTMLButtonElement> {
  variant?:  ButtonVariant;
  size?:     ButtonSize;
  loading?:  boolean;
  children:  React.ReactNode;
}

export const ButtonRoot = React.forwardRef<HTMLButtonElement, ButtonProps>(
  ({ variant = 'primary', size = 'md', loading = false, disabled, children, className, ...props }, ref) => {
    const cls = [
      'inline-flex items-center justify-center font-medium transition-colors border-1.5 border-transparent',
      'rounded-[var(--radius-md)]',
      'focus-visible:outline focus-visible:outline-[2px]',
      'focus-visible:outline-[var(--color-primary)] focus-visible:outline-offset-[3px]',
      'disabled:opacity-45 disabled:cursor-not-allowed',
      variantClasses[variant],
      sizeClasses[size],
      loading && 'cursor-wait',
      className,
    ].filter(Boolean).join(' ');

    return (
      <button
        ref={ref}
        className={cls}
        disabled={disabled || loading}
        aria-disabled={disabled || loading}
        aria-busy={loading}
        {...props}
      >
        {children}
      </button>
    );
  }
);

export const ButtonLabel = ({ children, className, ...props }: React.HTMLAttributes<HTMLSpanElement>) => (
  <span className={className} {...props}>{children}</span>
);

export const ButtonSpinner = ({ className, ...props }: React.HTMLAttributes<HTMLSpanElement>) => (
  <span
    className={['w-4 h-4 border-2 border-current border-t-transparent rounded-full animate-spin mr-2', className].filter(Boolean).join(' ')}
    aria-hidden="true"
    {...props}
  />
);

export const ButtonIcon = ({ children, className, ...props }: React.HTMLAttributes<HTMLSpanElement>) => (
  <span className={['inline-flex items-center justify-center', className].filter(Boolean).join(' ')} aria-hidden="true" {...props}>{children}</span>
);

export const Button = Object.assign(ButtonRoot, {
  Label: ButtonLabel,
  Spinner: ButtonSpinner,
  Icon: ButtonIcon,
});

Button.displayName = 'Button';
ButtonRoot.displayName = 'Button.Root';
ButtonLabel.displayName = 'Button.Label';
ButtonSpinner.displayName = 'Button.Spinner';
ButtonIcon.displayName = 'Button.Icon';
"
`;

exports[`Button snapshots > tailwind mode snapshot 2`] = `
"import type { Meta, StoryObj } from '@storybook/react';
import React, { useState } from 'react';
import { Button } from './Button';

const meta: Meta<typeof Button> = {
  title: 'Crucible/Button',
  component: Button,
  parameters: { layout: 'centered' },
  argTypes: {
    variant:  { control: 'select', options: ['primary', 'secondary', 'ghost', 'danger'] },
    size:     { control: 'select', options: ['sm', 'md', 'lg'] },
    loading:  { control: 'boolean' },
    disabled: { control: 'boolean' },
  },
};
export default meta;
type Story = StoryObj<typeof Button>;

export const Default: Story = {
  args: { variant: 'primary', size: 'md' },
  render: (args) => (
    <Button {...args}>
      <Button.Label>Button</Button.Label>
    </Button>
  ),
};

export const Primary: Story = {
  args: { variant: 'primary' },
  render: (args) => (
    <Button {...args}>
      <Button.Label>Primary Button</Button.Label>
    </Button>
  ),
};
export const Secondary: Story = {
  args: { variant: 'secondary' },
  render: (args) => (
    <Button {...args}>
      <Button.Label>Secondary Button</Button.Label>
    </Button>
  ),
};
export const Ghost: Story = {
  args: { variant: 'ghost' },
  render: (args) => (
    <Button {...args}>
      <Button.Label>Ghost Button</Button.Label>
    </Button>
  ),
};
export const Danger: Story = {
  args: { variant: 'danger' },
  render: (args) => (
    <Button {...args}>
      <Button.Label>Danger Button</Button.Label>
    </Button>
  ),
};

export const Sm: Story = {
  args: { size: 'sm' },
  render: (args) => (
    <Button {...args}>
      <Button.Label>Sm Size</Button.Label>
    </Button>
  ),
};
export const Md: Story = {
  args: { size: 'md' },
  render: (args) => (
    <Button {...args}>
      <Button.Label>Md Size</Button.Label>
    </Button>
  ),
};
export const Lg: Story = {
  args: { size: 'lg' },
  render: (args) => (
    <Button {...args}>
      <Button.Label>Lg Size</Button.Label>
    </Button>
  ),
};

export const Loading: Story = {
  args: { variant: 'primary', loading: true },
  render: (args) => (
    <Button {...args}>
      <Button.Spinner />
      <Button.Label>Loading...</Button.Label>
    </Button>
  ),
};

export const Disabled: Story = {
  args: { variant: 'primary', disabled: true },
  render: (args) => (
    <Button {...args}>
      <Button.Label>Disabled</Button.Label>
    </Button>
  ),
};

export const WithIcon: Story = {
  args: { variant: 'primary' },
  render: (args) => (
    <Button {...args}>
      <Button.Icon>🚀</Button.Icon>
      <Button.Label>Launch</Button.Label>
    </Button>
  ),
};
"
`;
